# starling

./: .gitignore  .replit  README.md  pyproject.toml  replit.nix  requirements.txt
starling/: app.py  chat.py
starling/templates/: langui.html  test.html
starling/templates/partials/: input.html  output.html
