[tool.poetry]
name = "repl-html-starling"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]
readme = "README.md"
packages = [{include = "repl_html_starling"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
openai = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
