[tool.poetry]
name = "starling"
version = "0.1.0"
description = "An applicatioon for practicing S.T.A.R behavioral interview questions"
authors = ["Joshua Oliphant"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
openai = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
